Updated show version template to not have any lists Updated show ver to excel to handle multiple files Updated show int stat to excel to include hostname as well as handle muliple files.

--- a/textfsm_templates/cisco_ios_show_version.template
+++ b/textfsm_templates/cisco_ios_show_version.template
@@ -3,8 +3,8 @@ Value ROMMON (\S+)
 Value HOSTNAME (\S+)
 Value UPTIME (.+)
 Value RUNNING_IMAGE (\S+)
-Value List HARDWARE (\S+\d\S+)
-Value List SERIAL (\S+)
+Value HARDWARE (\S+\d\S+)
+Value SERIAL (\S+)
 Value CONFIG_REGISTER (\S+)
 
 Start
