--- a/textfsm_templates/cisco_ios_show_interfaces_status.template
+++ b/textfsm_templates/cisco_ios_show_interfaces_status.template
@@ -1,5 +1,5 @@
 Value PORT (\S+)
-Value NAME (.+?)
+Value DESC (.+?)
 Value STATUS (err-disabled|disabled|connected|notconnect|inactive)
 Value VLAN (\S+)
 Value DUPLEX (\S+)
@@ -11,4 +11,4 @@ Start
 
 Begin
   ^(?=\s{0,9}${PORT}).{9}\s{20}${STATUS}\s+${VLAN}\s+${DUPLEX}\s+${SPEED}\s*${TYPE}$$ -> Record
-  ^(?=\s{0,9}${PORT}).{9}\s${NAME}\s+${STATUS}\s+${VLAN}\s+${DUPLEX}\s+${SPEED}\s*${TYPE}$$ -> Record
+  ^(?=\s{0,9}${PORT}).{9}${DESC}\s+${STATUS}\s+${VLAN}\s+${DUPLEX}\s+${SPEED}\s*${TYPE}$$ -> Record
